tests/syntax-error/return-in-if.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g return-in-if.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: return-in-if.silly:9:5: error: RETURN is not currently allowed in
// CHECK:     9 |     RETURN 0;
// CHECK:       |     ^

IF (1 EQ 1)
{
    RETURN 0;
};
